# online_store

./: .gitignore  README.md  compose.yml  docker-compose.yml  imtiaz.sql
authentication/: README.md  pyproject.toml
authentication/app/: config.py  main.py
brand/: .env  Dockerfile  README.md  pyproject.toml
brand/app/: config.py  kafka_consumer.py  main.py  operations.py
brand/app/exceptions/: handler.py
category/: .env  README.md  pyproject.toml
category/app/: config.py  kafka_consumer.py  main.py  operations.py
category/app/middle_ware/: ExceptionHandlingMiddleware.py
customer/: .env  README.md
customer/app/: config.py  kafka_consumer.py  main.py  operations.py
customer/app/backup/: kafka_consumer.py
db-service/: .env  Dockerfile  README.md  alembic.ini  example.txt  pyproject.toml  shared-0.1.0-py3-none-any.whl
db-service/alembic/versions/: 0c3539710497_create_customer_table.py  165b091b7ccd_create_payment_table.py  373d9bbd852b_modify_orders_table.py  629325b89c3e_create_database_tables.py
db-service/app/: config.py  kafka_consumer.py  kafka_producer.py  main.py
db-service/app/crud/: brand_crud.py  category_crud.py  customer_crud.py  order_crud.py  payment_crud.py  product_crud.py  user_crud.py
db-service/app/operation/: brand_operation.py  category_operation.py  customer_operation.py  order_operation.py  payment_operation.py  product_operation.py  user_operation.py
db-service/app/routers/: brand_router.py  category_router.py  customer_router.py  order_router.py  payment_router.py  product_router.py  user_router.py
inventory/: .env  Dockerfile  README.md  pyproject.toml
inventory/app/: config.py  kafka_consumer.py  kafka_producer.py  main.py  operations.py
mysql-init/: init-user.sql
notification/: .env  Dockerfile  README.md  pyproject.toml
notification/app/: config.py  kafka_consumer.py  main.py  operations.py
order/: .env  README.md  pyproject.toml
order/app/: config.py  kafka_consumer.py  main.py  operations.py
payment/: .env  Dockerfile  README.md  pyproject.toml
payment/app/: config.py  kafka_consumer.py  main.py  operations.py
products/: .env  Dockerfile  README.md  example.txt  pyproject.toml
products/app/: config.py  kafka_consumer.py  kafka_producer.py  main.py  operations.py
shared/: pyproject.toml
shared/models/: brand.py  category.py  customer.py  inventory.py  notification.py  order.py  order_detail.py  order_detail_model.py  payment.py  product.py  token.py  user.py
users/: .env  Dockerfile  Dockerfile.prod  README.md  example.txt  pyproject.toml
users/app/: config.py  kafka_admin.py  kafka_consumer.py  kafka_producer.py  main.py  operations.py
users/app/backup/: kafka_producer.py
users/users/: main.py
