[tool.poetry]
name = "payment"
version = "0.1.0"
description = ""
authors = ["Bilal <bilalmk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.1"
sqlmodel = "^0.0.19"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
aiohttp = "^3.9.5"
aiokafka = "^0.11.0"
stripe = "^10.3.0"
authorizenet = "^1.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
